welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: Missing closing brace `}' assumed here
if estFacemur()==false {
^Program:1: error: '(' expected but identifier found.
if estFacemur()==false {
   ^Program:11: error: illegal start of simple expression
}
^