welcome.lessons.welcome.conditions.Conditions.scala.code
if estFacemur()==false {
  avance()
  
}else {
  recule()
  avance()
  
  